<resources>
    <string name="no_network">The device is not connected to the network</string>
    <string name="no_data">No data or program expired</string>
    <string name="retry">retry</string>
    <string name="refresh">refresh</string>
    <string name="setting_data">Setting network</string>
    <string name="ok">ok</string>
    <string name="cancel">cancel</string>
    <string name="please_input_pwd">Please input password</string>
    <string name="wifi_setting">Wifi Setting</string>
    <string name="system_setting">System Setting</string>
    <string name="all_apps">All Apps</string>
    <string name="settings">Settings</string>
    <string name="service_host">Service host</string>
    <string name="service_status">Service status</string>
    <string name="app_version">Version code</string>
    <string name="termainal_number">Termainal number</string>
    <string name="logout_systen">Logout System</string>
    <string name="bind_termainal">Bind termainal</string>
    <string name="no_program">No program can be played at the current terminal, please publish it on the server</string>
    <string name="text_download_progress">Downloading resources, %1$d%% complete</string>
    <string name="load_data">Loading data</string>
    <string name="residual_storage_space">Residual storage space</string>
    <string name="show_log">Log display (for debugger)</string>
    <string name="bdm">binding code</string>
    <string name="zdbh">Device number</string>
    <string name="zdbm">Terminal alias</string>
    <string name="yhzh">User account</string>
    <string name="yhmm">User password</string>
    <string name="qrbd">Confirm the binding</string>
    <string name="wbzyc">Sorry, the program encountered an unexpected error:</string>
    <string name="qc">Restart App</string>
    <string name="jmtzz">Program to stop</string>
    <string name="no_programs">No programs</string>
    <string name="jzz">Loading...</string>
    <string name="log_start">The log window started successfully</string>
</resources>
