<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_height="50dp">
    <com.xl.xyl2.mvp.view.ui.ClearableEditText
        android:layout_width="0dp"
        android:inputType="textPassword"
        android:paddingLeft="5dp"
        android:maxLength="15"
        android:gravity="center"
        android:background="@null"
        android:textColor="@color/black"
        android:imeOptions="actionDone"
        android:textSize="14sp"
        android:layout_weight="1"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:id="@+id/et_password"
        android:hint="@string/please_input_pwd"
        android:layout_height="match_parent" />
    <Button
        android:layout_width="wrap_content"
        android:background="@color/gray"
        android:paddingLeft="30dp"
        android:id="@+id/btn_cancel"
        android:paddingRight="30dp"
        android:textColor="@color/white"
        android:text="@string/cancel"
        android:layout_height="match_parent" />
    <Button
        android:layout_width="wrap_content"
        android:text="@string/ok"
        android:id="@+id/btn_ok"
        android:background="@color/app_blue"
        android:textColor="@color/white"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:layout_height="match_parent" />
</LinearLayout>