<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/panel_bg"
    android:orientation="vertical"
    android:paddingBottom="10dp">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/app_blue"
        android:minHeight="?attr/actionBarSize"
        app:navigationIcon="?attr/homeAsUpIndicator" />

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:background="@drawable/shape_bg_top_bottom_border">
                <TextView
                    android:layout_width="wrap_content"
                    android:text="@string/bdm"
                    android:minWidth="100dp"
                    android:layout_margin="15dp"
                    android:textColor="@color/black"
                    android:layout_height="wrap_content" />
                <com.xl.xyl2.mvp.view.ui.ClearableEditText
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:id="@+id/et_bangdingma"
                    android:maxLines="1"
                    android:background="@null"
                    android:gravity="left|center_vertical"
                    android:textColor="@color/gray" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:background="@drawable/shape_bg_bottom_border">
                <TextView
                    android:layout_width="wrap_content"
                    android:text="@string/zdbh"
                    android:minWidth="100dp"
                    android:layout_margin="15dp"
                    android:textColor="@color/black"
                    android:layout_height="wrap_content" />
                <EditText
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:textColorHint="@color/gray"
                    android:id="@+id/et_shebeibianhao"
                    android:maxLines="1"
                    android:layout_weight="1"
                    android:background="@null"
                    android:gravity="left|center_vertical"
                    android:textColor="@color/gray" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:minWidth="100dp"
                android:orientation="horizontal"
                android:background="@drawable/shape_bg_bottom_border">
                <TextView
                    android:layout_width="wrap_content"
                    android:text="@string/zdbm"
                    android:minWidth="100dp"
                    android:layout_margin="15dp"
                    android:textColor="@color/black"
                    android:layout_height="wrap_content" />
                <com.xl.xyl2.mvp.view.ui.ClearableEditText
                    android:layout_width="0dp"
                    android:id="@+id/et_zhongduanbieming"
                    android:maxLines="1"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:background="@null"
                    android:gravity="left|center_vertical"
                    android:textColor="@color/gray" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:background="@drawable/shape_bg_bottom_border">
                <TextView
                    android:layout_width="wrap_content"
                    android:text="@string/yhzh"
                    android:minWidth="100dp"
                    android:layout_margin="15dp"
                    android:textColor="@color/black"
                    android:layout_height="wrap_content" />
                <com.xl.xyl2.mvp.view.ui.ClearableEditText
                    android:layout_width="0dp"
                    android:maxLines="1"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:id="@+id/et_yonghuzhanghao"
                    android:background="@null"
                    android:gravity="left|center_vertical"
                    android:textColor="@color/gray" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:background="@drawable/shape_bg_bottom_border">
                <TextView
                    android:layout_width="wrap_content"
                    android:text="@string/yhmm"
                    android:minWidth="100dp"
                    android:layout_margin="15dp"
                    android:textColor="@color/black"
                    android:layout_height="wrap_content" />
                <com.xl.xyl2.mvp.view.ui.ClearableEditText
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:id="@+id/et_yonghumima"
                    android:layout_weight="1"
                    android:background="@null"
                    android:gravity="left|center_vertical"
                    android:textColor="@color/gray" />
            </LinearLayout>
            <Button
                android:id="@+id/btn_bind"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_margin="15dp"
                android:background="@drawable/btn_round_blue"
                android:text="@string/qrbd"
                android:textColor="@color/white" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>
